--- a/index.html
+++ b/index.html
@@ -1,57 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title></title>
-  <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-  <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <title>一个不知名的小站</title>
+  <link rel="shortcut icon" href="./src/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="./src/style.css">
   <link rel="stylesheet" href="./src/markdown.css">
-  <script src="./libs/jquery.min.js"></script>
-  <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-  <!-- <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
-  <script src="./libs/markdown.js"></script>
 </head>
 <body class="container">
-  <header>
-    <h2 id="blogName"></h2>
-    <hr>
+  <header class="row" onclick="toggleList()">
+    <span id="blogName">一个不知名的小站</span>
+    <span id="subName"></span>
   </header>
 
-  <div id="main" class="row">
-    <div class="list col-md-3 col-xs-12"></div>
-    <article class="markdown-body entry-content col-md-9 col-xs-12" style="background-color: white"></article>
+  <div class="row">
+    <div class="list col-md-3 col-xs"></div>
+    <article class="markdown-body col-md-7 col-xs-full" style="background-color: white"></article>
   </div>
 
-  <footer class="text-right">
-    <hr>
-    Hello world
+  <footer class="row">
+    <span id="endWords">Hello world</span>
   </footer>
 
+  <div class="tools">
+    <!-- <button onclick="toggleList()">目录</button> -->
+    <button onclick="$('html,body').animate({scrollTop: '0px'}, 600);">⇧</button>
+  </div>
+
+  <script src="./libs/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="./src/showArticle.js"></script>
-  <script>
-    $.getJSON(
-      'https://freetes.github.io/MDBlog/config.json',
-      data=>{
-        document.title = data.name
-        $("#blogName").text(data.name)
-        data.articles.sort((a, b)=>new Date(b.date)-new Date(a.date))
-        for(let item of data.articles){
-          let li = document.createElement("li")
-          li.className = 'list-group-item'
-          li.onclick = function () {
-            showArticle(item)
-          }
-          li.innerHTML = `
-            <h4>${item.title}</h4>
-            <span class='text-muted'>${item.subtitle}</span>
-            <span class='text-muted'>${item.date}</span>
-          `
-          $(".list").append(li)
-        }
-        $(".list").children().first().click()
-      }
-    )
-  </script>
+  <script src="./src/animation.js"></script>
 </body>
 </html>
